src/styles/pages/new-landing-page.scss
$mountain-size: 48vh;

.layout.new-landing-page {
  > main {
    position: absolute;

    > .sky {
      display: grid;
      grid-template-columns: 1fr auto 1fr;
      grid-template-rows: minmax(250px, 1fr) auto minmax(250px, 1fr);

      position: relative;
      background-image: linear-gradient(to bottom, $human-blue, $human-pink);
      min-height: 700px;
      height: 100vh;
      width: 100vw;

      > .new-hero {
        grid-column: 2;
        grid-row: 2;

        display: flex;
        flex-direction: column;
        justify-content: center;
        text-align: center;

        color: white;
        text-align: center;

        z-index: 99;

        > .mhi-button {
          font-weight: bold;
          padding: 1em 3em;
        }
      }

      > .stars {
        grid-column: 1 / 4;
        grid-row: 1 / 4;
        padding-top: $header-height + 35px;
        height: 100%;
        width: 100%;
      }

      .mountain-background {
        position: relative;
        grid-column: 1 / 4;
        grid-row: 3 / 4;
        height: 100%;
        width: 100%;
      }

      .mountain-midground {
        position: relative;
        width: 100%;
        height: 75%;
      }

      .mountain-background1 {
        position: relative;
        width: 35%;
        height: 100%;
      }

      .mountain-background2 {
        position: relative;
        left: 20%;
        width: 80%;
        height: 100%;
      }

      .mountain-foreground {
        position: relative;
        grid-column: 1 / 4;
        grid-row: 3;
        height: 100%;
        width: 100%;
      }
    }

    > .post-sky1 {
      position: relative;
      top: -3px; // ugh
      min-height: 1630px;
      width: 100vw;
      background-image: linear-gradient(to bottom, $human-blue, rgba(139, 160, 187, 1.0));

      $astronaut-width: 44.166666667%;

      > .about, .why {
        color: white;
        margin-left: $astronaut-width;
        padding-right: 100px;
        text-align: left;

        h2 {
          text-align: left;
          color: white;
          font-size: 2em;
          font-weight: 300;
        }
      }

      .astronaut {
        width: $astronaut-width;

        .cord {
          // Looks off, might be some way of adding the cord in with an animation
          display: none;
        }
      }

      > .astronaut-star-group {
        position: absolute;
        left: 6.25%;
        top: -4%;
        width: 36.736111111%;
      }
    }

    // .why {
    //   display: flex;
    //   justify-content: center;
    //   align-items: center;
    //   background-color: white;
    //   border-radius: 40px;
    //   margin: 300px 100px;
    //   padding: 100px;

    //   h1 {
    //     color: $human-blue;
    //     text-align: left;
    //   }
    // }

    .join {
      display: flex;
      justify-content: center;
      align-items: center;
      margin: 100px;

      h1 {
        color: $human-blue;
        text-align: left;
      }
    }
  }

  form[name="submit-application"] {
    max-width: 50%;
  }
}

